<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2014  Jérôme Nègre
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="app_name">OSM On The Go</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_fixme">Add Fixme</string>
    <string name="action_add_address">Add Address</string>
    <string name="action_delete">Delete</string>
    <string name="action_my_location">Show My Location</string>
    <string name="action_share">Share</string>
    <string name="action_show_base_osmfr">Osmfr</string>
    <string name="action_show_base_mapnik">Mapnik</string>
    <string name="action_show_base_mapquestosm">MapquestOSM</string>
    <string name="action_show_layer_bano">Show BANO</string>
    <string name="action_show_layer_noname_fr">Show NONAME (FR)</string>
    <string name="action_show_layer_noname_ch">Show NONAME (CH)</string>
    <string name="action_clear_cache">Clear Tile Cache</string>
    <string name="action_clear_all">Clear Survey</string>

    <string name="msg_cache_cleared">The tile cache has been cleared</string>
    <string name="msg_export_failed">Failed to export data</string>

    <string name="label_addr_street">Street:</string>
    <string name="hint_addr_street">addr:street</string>
    <string name="label_addr_number">Number:</string>
    <string name="hint_addr_number">addr:housenumber</string>

    <string name="label_fixme">Enter a fixme</string>
    <string name="hint_fixme">fixme</string>

</resources>
