<!--
  ~ Copyright 2014  Jérôme Nègre
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MapActivity" >
    <item android:id="@+id/action_add_fixme"
        android:title="@string/action_add_fixme"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="50"
        android:showAsAction="always" />
    <item android:id="@+id/action_add_address"
        android:title="@string/action_add_address"
        android:icon="@drawable/ic_address"
        android:orderInCategory="50"
        android:showAsAction="always" />
    <item android:id="@+id/action_my_location"
        android:title="@string/action_my_location"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:orderInCategory="100"
        android:showAsAction="always" />
    <item android:id="@+id/action_delete"
          android:title="@string/action_delete"
          android:icon="@android:drawable/ic_menu_delete"
          android:orderInCategory="100"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" />

    <!-- base layer -->
    <group android:checkableBehavior="single">
        <item android:id="@+id/action_show_base_osmfr"
              android:title="@string/action_show_base_osmfr"
              android:orderInCategory="100"
              android:showAsAction="never" />
        <item android:id="@+id/action_show_base_mapnik"
              android:title="@string/action_show_base_mapnik"
              android:orderInCategory="100"
              android:showAsAction="never" />
        <item android:id="@+id/action_show_base_mapquestosm"
              android:title="@string/action_show_base_mapquestosm"
              android:orderInCategory="100"
              android:showAsAction="never" />

    </group>

    <!-- overlays -->
    <item android:id="@+id/action_show_layer_bano"
          android:title="@string/action_show_layer_bano"
          android:checkable="true"
          android:orderInCategory="100"
          android:showAsAction="never" />
    <item android:id="@+id/action_show_layer_noname_fr"
          android:title="@string/action_show_layer_noname_fr"
          android:checkable="true"
          android:orderInCategory="100"
          android:showAsAction="never" />
    <item android:id="@+id/action_show_layer_noname_ch"
          android:title="@string/action_show_layer_noname_ch"
          android:checkable="true"
          android:orderInCategory="100"
          android:showAsAction="never" />

    <!-- cleaning -->
    <item android:id="@+id/action_clear_cache"
          android:title="@string/action_clear_cache"
          android:orderInCategory="100"
          android:showAsAction="never" />

    <item android:id="@+id/action_clear_all"
        android:title="@string/action_clear_all"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <!--
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
        -->
</menu>
