<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_addr_number"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addr_number"
                android:hint="@string/hint_addr_number"
                android:editable="false" />

            <ImageButton
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:onClick="onClearButton" />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:measureWithLargestChild="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_addr_street"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addr_street"
                android:layout_span="2"
                android:hint="@string/hint_addr_street" />
        </TableRow>
    </TableLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/extension_pad"></LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="0,1,2">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="1"
                android:onClick="onKeyPadButton"
                android:layout_weight="1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="2"
                android:onClick="onKeyPadButton"
                android:layout_weight="1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="3"
                android:onClick="onKeyPadButton"
                android:layout_weight="1" />

        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="4"
                android:onClick="onKeyPadButton"
                android:layout_weight="1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="5"
                android:onClick="onKeyPadButton"
                android:layout_weight="1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="6"
                android:onClick="onKeyPadButton"
                android:layout_weight="1" />

        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="7"
                android:onClick="onKeyPadButton"
                android:layout_weight="1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="8"
                android:onClick="onKeyPadButton"
                android:layout_weight="1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="9"
                android:onClick="onKeyPadButton"
                android:layout_weight="1" />

        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text=" "
                android:onClick="onKeyPadButton"
                android:layout_weight="1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="0"
                android:onClick="onKeyPadButton"
                android:layout_weight="1" />

            <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@android:string/ok"
                android:layout_weight="1"
                android:onClick="onOK" />

        </TableRow>
    </TableLayout>

</LinearLayout>